--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
   - python=3.8
   - netCDF4
   - cartopy=0.19.0
-  - matplotlib
+  - matplotlib=3.5.2
   - xarray
   - jupyter
   - metpy
