--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
+name: my-custom-env
 channels:
   - conda-forge
   - defaults
 dependencies:
+  - anaconda::libtiff
   - python=3.8
   - netCDF4
   - cartopy=0.19.0
